[package]
name = "px4io-driver"
version = "0.1.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"


[dependencies]
embedded-hal = { version = "0.2.3", features = ["unproven"] }
nb =  "0.1.2"
cortex-m-semihosting = "0.3.5"

[dev-dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
panic-semihosting = "0.5.3"
stm32h7 = { version = "0.10.0", features = ["stm32h743"] }
#stm32h7xx-hal = { version = "0.4.0", features = ["stm32h743", "rt"] }
#stm32h7xx-hal = { git = "https://github.com/stm32-rs/stm32h7xx-hal", features = ["stm32h743", "rt"] }
stm32h7xx-hal = { path = "../stm32h7xx-hal" , features = ["stm32h743", "rt"]}